css/main.css
html {
  box-sizing: border-box;
}

/***** GRID *****/

.full-width {
    width: 1200px;
    margin: 0 auto;
    overflow: auto;
  }

 .half-width {
    width: 600px;
    float: left;
    margin: 0 auto;
    overflow: auto;
 }

 .third-width {
    width: 400px;
    float: left;
    margin: 0 auto;
    overflow: auto;
 }

 /***** HEADER *****/

 header {
    height: 765px;
    background-image: url('../img/blob.jpg');
    background-size: cover;
    background-position: center;
    margin: 0px;
}

header h1 {
    font-family: 'Bowlby One SC', cursive;
    font-size: 75px;
    margin-top: 10px;
    margin-bottom: -30px;
    color: #bbc085;
    padding: 0 0 0 25px;
    text-shadow: -1px 1px 0 #000,
				  1px 1px 0 #000,
				 1px -1px 0 #000;
				-1px -1px 0 #000;
}

/* I want h2 to be a lot closer to h1 (below) but I can't quite get it there! */
header h2 {
    font-family: 'Bowlby One SC', cursive;
    font-size: 40px;
    margin: 0px;
    color: #EAD2AC;
    padding: 0 100px 0 25px;
    text-shadow: -1px 1px 0 #000,
				  1px 1px 0 #000,
				 1px -1px 0 #000;
				-1px -1px 0 #000;
}

nav {
    font-family: 'Bowlby One SC', cursive;
    margin: 0px;
    padding: 30px 25px;
}
nav ul li{
    display: inline-block;
}
nav ul li a {
    text-decoration: none;
    font-size: 22px;
    color: #FE938C;
    padding: 15px;
    text-shadow: -1px 1px 0 #000,
				  1px 1px 0 #000,
				 1px -1px 0 #000;
				-1px -1px 0 #000;
}

/* for whenever I figure out what I want my career path to be... it will be written in the lower right hand corner, underneath the sneakers.
header h2 {
    width: 1100px;
    clear: both;
    font-family: 'Share', cursive;
    font-size: 52px;
    line-height: 120px;
    color: #FE938C;
    text-align: right;
    padding: 400px 0 0 100px;
    text-shadow: -1px 1px 0 #000,
				  1px 1px 0 #000,
				 1px -1px 0 #000;
				-1px -1px 0 #000;
*/

/***** ABOUT *****/
#about {
        background: linear-gradient(
         to right,
         #E6B89C 0%,
         #E6B89C 50%,
         #EAD2AC 50%,
         #EAD2AC 100%
        );
}

 #about .full-width {
     padding: 0 0;
 }

 #about h2 {
     font-family: 'Bowlby One SC', cursive;
     color: #334147;
     font-size: 60px;
     padding-left: 50px;
 }

 #about p, ol {
     font-size: 28px;
     font-family: 'Share', cursive;
     color: #334147;
     line-height: 50px;
     padding-left: 50px;
     padding-right: 50px;
 }

 #about ol {
   font-size: 40px;
   padding-left: 100px;
   line-height: 55px;
 }

  /***** PROJECTS *****/
  #projects {
       background-color: #FE938C;
       text-align: center;
       font-family: 'Bowlby One SC', cursive;
       font-size: 80px;
       color: #EAD2AC;
       text-shadow: -1px 1px 0 #000,
   				  1px 1px 0 #000,
   				 1px -1px 0 #000;
   				-1px -1px 0 #000;
       }


 /***** WORK *****/

 #video {
      background-color: #334147;
      text-align: center;
      }

#video .full-width {
          padding: 20px 0 20px 0;
      }
#video h2 {
    font-family: 'Bowlby One SC', cursive;
    color: #EAD2AC;
    font-size: 60px;
    padding-left: 50px;
    text-align: left;
      }

#video img {
          padding-bottom: 30px;
      }

#video h3 {
          font-family: 'Share', cursive;
          font-size: 24px;
          color: #EAD2AC;
          line-height: 32px;
          width: 190px;
          margin: 0 auto;
      }

#video p {
          font-family: 'Share', cursive;
          color: #EAD2AC;
          font-size: 19px;
          line-height: 30px;
          padding: 0 50px;
      }

/***** contact *****/

#contact {
        background-color: #A3A3A3;
        font-family: 'Share', cursive;
      }

#contact .full-width {
         padding: 20px 50px;
}

#cowboys  {
   padding-top: 50px;
   margin-left: 25px;
}


#contact h2, #contact, #email, #contact ul {
   padding-left: 30px;
}

#contact h2 {
   font-family: 'Bowlby One SC', cursive;
   font-size: 100px;
   color: #FE938C;
   text-shadow: -1px 1px 0 #000,
        1px 1px 0 #000,
       1px -1px 0 #000;
      -1px -1px 0 #000;
}

#contact a {
   text-decoration: none;
   color: #334147;
   font-size: 30px;
   text-align: right;
}

#email {
       font-size: 100px;

}

#email:link    { color: #334147;  }
#email:visited { color: #06D6A0;   }
#email:hover   { color: #EF476F; }
#email:active  { color: #FFD166;  }

#contact ul {
   list-style: none;
}
#contact ul li {
    display: inline-block;
}
#contact ul img {
   padding-right: 48px;
}

